Fix(dash-core-api, feature.component): use path instead of String Add(dash-core-api): @Getter for `CatCode`